--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t kevin/docker-react npm run test -f Dockerfile.dev .
+  - docker build -t kevin/docker-react -f Dockerfile.dev .
 
 script:
   - docker run kevin/docker-react npm run test -- --coverage
